[package]
name = "rjt"
version = "0.1.0"
authors = ["Garrett Malmquist <gmalmquist@squareup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
bincode = "1.2.1"
futures = { version = "0.3.4", features = ["thread-pool"] }
json = "0.12.1"
lazy_static = "1.4.0"
noak = "0.4.0-alpha.3"
regex = "1.3.4"
rust-crypto = "0.2"
serde = { version = "1.0.104", features = ["derive"] }
shellexpand = "2.0.0"
tempfile = "3.1"
zip = "0.5.4"
reqwest = "0.10.3"
tokio = { version = "0.2", features = ["full"] }
